--- a/requirements.txt
+++ b/requirements.txt
@@ -19,5 +19,8 @@ protobuf # Dependency for AI services
 
 # --- Utilities ---
 python-dotenv==1.1.1
-requests==2.32.5
 psycopg2-binary==2.9.11
+requests==2.31.0
+# Authentication
+Flask-Login==0.6.3
+Authlib==1.3.0
